--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ __pycache__
 *.hmm.h3p
 antismash/config/instance.cfg
 antismash/detection/hmm_detection/data/bgc_seeds.hmm
+antismash/databases/pfam/*
+antismash/databases/clusterblast/*
