--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ __pycache__
 *.hmm.h3p
 antismash/config/instance.cfg
 antismash/detection/hmm_detection/data/bgc_seeds.hmm
-antismash/databases/pfam/*
-antismash/databases/clusterblast/*
+antismash/databases/*
+
+# keep these, even in locations that are ignored
+!antismash/databases/README
