--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ disallow_untyped_defs=True
 check_untyped_defs=True
 ignore_missing_imports=True
 warn_unused_ignores=True
+
+[coverage:report]
+exclude_lines = 
+    raise NotImplementedError
