all: use HTTPS for all secondarymetabolite.org links

--- a/antismash/config/default.cfg
+++ b/antismash/config/default.cfg
@@ -3,5 +3,5 @@ evalue = 0.01
 score = 0
 
 [urls]
-bacteria_baseurl = http://antismash.secondarymetabolites.org/
-fungi_baseurl = http://fungismash.secondarymetabolites.org/
+bacteria_baseurl = https://antismash.secondarymetabolites.org/
+fungi_baseurl = https://fungismash.secondarymetabolites.org/
