chore: bump pylint function argument limit from 5 to 7
Many of our result classes store a variety of info that can't be
meaningfully grouped, so increase the limit a little to cut down
on the noise

--- a/.pylintrc
+++ b/.pylintrc
@@ -19,3 +19,7 @@ function-rgx=[a-z_][a-z0-9_]{2,40}$
 method-rgx=[a-z_][a-z0-9_]{2,40}$
 # same is true for variables
 variable-rgx=[a-z_][a-z0-9_]{1,40}$
+
+[DESIGN]
+# having details provided as args is common, bump from default of 5
+max-args=7
