output/html: make .css files depend on secmet.less as well
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/Makefile
+++ b/antismash/outputs/html/css/Makefile
@@ -1,6 +1,6 @@
 all: bacteria.css fungi.css plants.css
 
-%.css: %.less style.less
+%.css: %.less style.less secmet.less
 	lessc --clean-css="--s1 --advanced --compatibility=ie8" $< $@
 
 clean:
