config: add a docs URL to default config

--- a/antismash/config/default.cfg
+++ b/antismash/config/default.cfg
@@ -5,3 +5,4 @@ score = 0
 [urls]
 bacteria_baseurl = https://antismash.secondarymetabolites.org/
 fungi_baseurl = https://fungismash.secondarymetabolites.org/
+docs_baseurl = https://docs.antismash.secondarymetabolites.org/
