chore: ignore mypy errors in tests
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,9 @@ check_untyped_defs=True
 ignore_missing_imports=True
 warn_unused_ignores=True
 
+[mypy-antismash.*.test.*]
+ignore_errors=True
+
 [coverage:report]
 exclude_lines = 
     raise NotImplementedError
