chore: silence some overeager pylint issues

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,7 @@
 [MASTER]
 ignore=external
 reports=y
-disable=bad-continuation
+disable=bad-continuation,too-few-public-methods
 
 [TYPECHECK]
 ignored-classes=Config,TestCase,Namespace
@@ -19,6 +19,8 @@ function-rgx=[a-z_][a-z0-9_]{2,40}$
 method-rgx=[a-z_][a-z0-9_]{2,40}$
 # same is true for variables
 variable-rgx=[a-z_][a-z0-9_]{1,40}$
+# some names are shorter than 3 chars but informative
+good-names=i,j,k,ex,Run,_,id
 
 [DESIGN]
 # having details provided as args is common, bump from default of 5
