--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,9 @@ warn_unused_ignores=True
 [mypy-antismash.*.test.*]
 ignore_errors=True
 
+[mypy-antismash.*.external.*]
+ignore_errors=True
+
 [coverage:report]
 exclude_lines = 
     raise NotImplementedError
