chore: update .gitignores
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,13 @@ antismash/modules/*/data/*.classifier.pkl
 antismash/modules/*/data/*.scaler.pkl
 antismash.egg-info/*
 **/.ropeproject/*
+.vim/*
 antismash/git_hash
 pip-delete-this-directory.txt
 pip-egg-info/*
+
+# generated during make test
+nisin/*
 
 # keep these, even in locations that are ignored
 !antismash/databases/README
