chore: update mypy to 0.910

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,7 @@ disallow_untyped_defs=True
 check_untyped_defs=True
 ignore_missing_imports=True
 warn_unused_ignores=True
-
-[mypy-antismash.*.test.*]
-ignore_errors=True
-
-[mypy-antismash.*.external.*]
-ignore_errors=True
+exclude=/setup\.py$|test/|external/
 
 [coverage:report]
 exclude_lines = 
