chore: also allow our max line length for flake8
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [pycodestyle]
 max-line-length=100
 
+[flake8]
+max-line-length=100
+
 [mypy]
 incremental=True
 disallow_untyped_defs=True
@@ -10,6 +13,6 @@ warn_unused_ignores=True
 exclude=/setup\.py$|test/|external/
 
 [coverage:report]
-exclude_lines = 
+exclude_lines =
     pragma: no cover
     raise NotImplementedError
