chore: handle more workflow deprecations

--- a/.github/workflows/pylint_issue_reporter.yml
+++ b/.github/workflows/pylint_issue_reporter.yml
@@ -7,11 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # install python
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
       with:
         python-version: '3.x'
     # checkout the PR
     - uses: actions/checkout@v3
+      with:
+        ref: "refs/pull/${{ github.event.number }}/merge"
     # cache the pip step for speed
     - uses: actions/cache@v3
       with:
