nrps_pks: Add support for predicting A domain substrates with nrpys
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/.pylintrc
+++ b/.pylintrc
@@ -2,6 +2,8 @@
 ignore=external
 reports=y
 disable=too-few-public-methods
+extension-pkg-whitelist=
+    nrpys
 
 [MESSAGES CONTROL]
 # raising 'from' is almost entirely false positives
