chore: handle mypy strangeness in some setups

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ check_untyped_defs=True
 ignore_missing_imports=True
 warn_unused_ignores=True
 exclude=/setup\.py$|test/|external/
+follow_imports=silent
 
 [coverage:report]
 exclude_lines =
