--- a/.github/workflows/pylint_issue_reporter.yml
+++ b/.github/workflows/pylint_issue_reporter.yml
@@ -5,6 +5,9 @@ on: [pull_request_target]
 jobs:
   lint_comparison:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
     # install python
     - uses: actions/setup-python@v4
