--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ pip-egg-info/*
 
 # generated during make test
 nisin/*
+/*/
+/*.gb*
+/*.gff
+/*.fa
 
 # keep these, even in locations that are ignored
 !antismash/databases/README
+!.github/
+!antismash/
