chore: update mypy to 1.9.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ ignore_missing_imports=True
 warn_unused_ignores=True
 exclude=/setup\.py$|test/|external/
 follow_imports=silent
+no_implicit_optional=False
 
 [coverage:report]
 exclude_lines =
