genefunctions: refactor to allow for more variety in tool methods

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,16 @@ max-line-length=100
 [mypy]
 incremental=True
 disallow_untyped_defs=True
+disallow_incomplete_defs=True
 check_untyped_defs=True
 ignore_missing_imports=True
 warn_unused_ignores=True
 exclude=/setup\.py$|test/|external/
 follow_imports=silent
 no_implicit_optional=False
+
+[mypy-antismash.detection.genefunctions.*]
+disallow_any_generics=True
 
 [coverage:report]
 exclude_lines =
